# nemo_guardrails_configuration

./: .gitignore  README.md
final_pkg/: pyproject.toml
final_pkg/company_nemo_guardrails/: __init__.py  actions.py  app.py  app_nemo.py  deterministic_rails.py  factory.py  judges.py  llm_client.py  llm_rails.py  registry.py
final_pkg/company_nemo_guardrails/config/: config.py  config.yml
final_pkg/company_nemo_guardrails/config/rails/: input.co  output.co
final_pkg/company_nemo_guardrails/prompts/: aluc.py  csi.py  gnd.py  pinj.py  ragsec.py  revprec.py  safe_out.py  supervisor.py  tox.py
final_pkg/company_nemo_guardrails/tests/: conftest.py  test_alcada.py  test_consist_resposta.py  test_guardrails.py  test_mask_cpf.py  test_multiplos_cenarios.py  test_observabilidade.py  test_out_of_scope.py  test_regressao.py  test_tox.py
final_pkg/examples/: app_nemo.py  test.py
nemo_guardrails_tracing_project/: env.variables  requirements.txt
nemo_guardrails_tracing_project/config/: config.py  config.yml  guardrails.yaml
nemo_guardrails_tracing_project/config/rails/: flows.co  input.co  output.co
nemo_guardrails_tracing_project/scripts/: run_tests.sh
nemo_guardrails_tracing_project/src/: actions.py  app.py  app_nemo.py  deterministic_rails.py  llm_client.py  llm_rails.py  models.py  tracing.py  tracing_langfuse.py
nemo_guardrails_tracing_project/tests/: test_alcada.py  test_consist_resposta.py  test_guardrails.py  test_mask_cpf.py  test_multiplos_cenarios.py  test_observabilidade.py  test_out_of_scope.py  test_regressao.py  test_tox.py
(+6 files in other folders)
