
[build-system]
requires = ["setuptools>=68","wheel","build"]
build-backend = "setuptools.build_meta"

[project]
name = "company-nemo-guardrails"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = ["nemoguardrails[openai]","pydantic>=2"]

[tool.setuptools.packages.find]
where=["."]
include=["company_nemo_guardrails*"]

[tool.setuptools.package-data]
company_nemo_guardrails=["config/**/*","*.yml","*.yaml","*.co"]
